--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
+src-tauri/resources/binaries/**/* filter=lfs diff=lfs merge=lfs -text
 src-tauri/resources/binaries/** filter=lfs diff=lfs merge=lfs -text
